[client/app] add wrapper around map and fix styles so that map displays properly on mobile

--- a/packages/client/src/_app/style.css
+++ b/packages/client/src/_app/style.css
@@ -3,11 +3,16 @@
     display: flex;
 }
 
-.app__menu {
-    flex-basis: 300px;
+.app__map-wrapper {
+    position: relative;
+    flex: 1;
 }
 
 .app__map {
-    flex-grow: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
